--- a/.github/actions/setup-toolchain/action.yaml
+++ b/.github/actions/setup-toolchain/action.yaml
@@ -17,19 +17,23 @@ inputs:
   setup-node:
     description: Whether to install Node.
     required: false
-    default: "true"
+    default: 'true'
   install-wails:
     description: Whether to install Wails.
     required: false
-    default: "true"
+    default: 'true'
   install-mage:
     description: Whether to install Mage.
     required: false
-    default: "true"
+    default: 'true'
   cache-go-tools:
     description: Whether to cache Go tool binaries.
     required: false
-    default: "true"
+    default: 'true'
+  install-linux-deps:
+    description: Whether to install Linux build dependencies.
+    required: false
+    default: 'false'
 runs:
   using: composite
   steps:
@@ -44,7 +48,7 @@ runs:
       uses: actions/setup-node@v6
       with:
         node-version: ${{ inputs.node-version }}
-        cache: "npm"
+        cache: 'npm'
         cache-dependency-path: frontend/package-lock.json
 
     - name: Resolve Go bin path
@@ -107,3 +111,11 @@ runs:
         if [ "$need_mage" = "true" ]; then
           go install github.com/magefile/mage@${{ steps.mage_version.outputs.version }}
         fi
+
+    - name: Install Linux build dependencies
+      if: ${{ inputs.install-linux-deps == 'true' && runner.os == 'Linux' }}
+      shell: bash
+      run: |
+        # Wails Linux packaging needs WebKit headers and rpm tooling.
+        sudo apt-get update
+        sudo apt-get install -y libwebkit2gtk-4.1-dev rpm
