--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,7 @@ on:
       - "v[1-9]*"
 
 permissions:
-  contents: write
+  contents: read
 
 jobs:
   prepare:
@@ -168,6 +168,8 @@ jobs:
       - test
       - build
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     env:
       GH_TOKEN: ${{ secrets.RELEASES_REPO_TOKEN }}
     steps:
