--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -10,36 +10,60 @@ body:
       options:
         - label: I have searched the existing issues
           required: true
+
   - type: textarea
     attributes:
       label: Describe the bug
       description: Clearly describe what you are experiencing. If the bug is intermittent, please mention that.
     validations:
       required: true
+
   - type: textarea
     attributes:
       label: Steps to reproduce
       description: How does the bug happen?
     validations:
       required: true
-  - type: textarea
+
+  - type: dropdown
     attributes:
-      label: Environment
-      description: |
-        example:
-        OS, Version, Arch: Windows 11, 24H2, amd64
-        App Version: v1.0.5
-      value: |
-        OS, Version, Arch:
-        App Version:
+      label: OS Type
+      description: What type of operating system are you using?
+      options:
+        - label: macOS
+        - label: Linux
+        - label: Windows
     validations:
       required: true
+
+  - type: input
+    attributes:
+      label: OS Version
+      description: What version of the operating system are you using? If Linux, please include the distro name.
+    validations:
+      required: true
+
+  - type: dropdown
+    attributes:
+      label: OS Architecture
+      description: What is the architecture of your operating system?
+      options:
+        - label: amd64 (x86_64)
+        - label: arm64 (aarch64)
+    validations:
+      required: true
+
+  - type: input
+    attributes:
+      label: App Version
+      description: What version of the app are you using? You can find this in the "About" window.
+    validations:
+      required: true
+
   - type: textarea
     attributes:
       label: Anything else?
       description: |
-        Is there anything else you'd like to add?
-
-        Tip: You can attach images or log files by clicking this area to highlight it and then dragging files in.
+        Is there anything else you'd like to add to help clarify the issue? Screenshots, links, etc.
     validations:
       required: false
