--- a/.github/actions/setup-toolchain/action.yaml
+++ b/.github/actions/setup-toolchain/action.yaml
@@ -1,5 +1,5 @@
 name: Setup toolchain
-description: Setup Go/Node and install Wails/Mage with caching.
+description: Setup Go/Node and install Wails/Mage.
 inputs:
   go-version:
     description: Go version to install.
@@ -26,10 +26,6 @@ inputs:
     description: Whether to install Mage.
     required: false
     default: 'true'
-  cache-go-tools:
-    description: Whether to cache Go tool binaries.
-    required: false
-    default: 'true'
   install-linux-deps:
     description: Whether to install Linux build dependencies.
     required: false
@@ -41,15 +37,12 @@ runs:
       uses: actions/setup-go@v6
       with:
         go-version: ${{ inputs.go-version }}
-        cache: true
 
     - name: Setup Node
       if: ${{ inputs.setup-node == 'true' }}
       uses: actions/setup-node@v6
       with:
         node-version: ${{ inputs.node-version }}
-        cache: 'npm'
-        cache-dependency-path: frontend/package-lock.json
 
     - name: Resolve Go bin path
       id: gobin
@@ -86,26 +79,10 @@ runs:
           echo "version=${{ inputs.mage-version }}" >> "$GITHUB_OUTPUT"
         fi
 
-    - name: Resolve staticcheck version
-      id: staticcheck_version
-      if: ${{ inputs.cache-go-tools == 'true' }}
-      shell: bash
-      run: |
-        RESOLVED="$(go list -m -f '{{.Version}}' honnef.co/go/tools@latest)"
-        echo "version=$RESOLVED" >> "$GITHUB_OUTPUT"
-
-    - name: Cache Go tools
-      if: ${{ inputs.cache-go-tools == 'true' }}
-      id: cache-go-tools
-      uses: actions/cache@v4
-      with:
-        path: ${{ steps.gobin.outputs.gobin }}
-        key: go-tools-${{ runner.os }}-${{ runner.arch }}-go${{ inputs.go-version }}-wails${{ inputs.wails-version }}-mage${{ steps.mage_version.outputs.version }}-staticcheck${{ steps.staticcheck_version.outputs.version }}
-
     - name: Install Go tools
       shell: bash
       run: |
-        # Only install tools missing from GOBIN to allow cache hits.
+        # Only install tools missing from GOBIN to keep setup idempotent.
         need_wails="false"
         if [ "${{ inputs.install-wails }}" = "true" ]; then
           if [ ! -x "$GOBIN/wails" ] && [ ! -x "$GOBIN/wails.exe" ]; then
