--- a/test/kind/clusters/prod.yaml
+++ b/test/kind/clusters/prod.yaml
@@ -1,12 +1,14 @@
 kind: Cluster
 apiVersion: kind.x-k8s.io/v1alpha4
+name: prod
+
+networking:
+  apiServerAddress: "127.0.0.1"
+  apiServerPort: 6445
+
 nodes:
   - role: control-plane
-    extraPortMappings:
-      - containerPort: 32335
-        hostPort: 32335
-        listenAddress: "0.0.0.0"
-        protocol: tcp
+  - role: worker
   - role: worker
   - role: worker
   - role: worker
